--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,11 +13,18 @@
  *= require_tree .
  *= require_self
  */
+ 
+ @import 'compass';
+ @import 'fonts';
 
 body, html {
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color: #333341;
+  background-color: #232323;
+}
+
+p {
+  margin: 0;
 }
