--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,10 +1,15 @@
-<div id="outer-wrap">
-  <p id="logo">ClickMade</h1>
-  <p class="title">We Build Super-Awesome<br>WordPress Themes. Nuff Said.</p>
-  <p class="grey-description">We're not quite ready yet, but we're painfully close. Pop
-  in your email in the box below and we'll give you the nod when we've launched. We'll even throw
-  in a <span class="white-text">free theme</span> for your trouble.</p>
-  
-  <input type="text" class="email" placeholder="Enter your email address...">
-  <div id="root"></div>
+<div class='image-background'>
+  <div class='image-overlay'>
+    <div id="outer-wrap">
+      <p id="logo">ClickMade</h1>
+      <p class="title">We Build Super-Awesome<br>WordPress Themes. Nuff Said.</p>
+      <p class="grey-description">We're not quite ready yet, but we're painfully close. Pop
+      in your email in the box below and we'll give you the nod when we've launched. We'll even throw
+      in a <span class="white-text">free theme</span> for your trouble.</p>
+      
+      <input type="text" class="email" placeholder="Enter your email address...">
+      <span class="submit">+</span>
+      <div id="root"></div>
+    </div>
+  </div>
 </div>
