--- a/app/assets/stylesheets/coming_soon.css.scss
+++ b/app/assets/stylesheets/coming_soon.css.scss
@@ -1,60 +1,96 @@
 @import 'compass';
 @import 'fonts';
 
-#outer-wrap {
-  width: 525px;
+.image-background {
+  background-image: url("/assets/modern-bg.jpeg");
+  background-size: cover;
+  width: 100%;
   height: 100%;
-  box-sizing: border-box;
-  margin: 30px 40px;
-  background: transparent;
-  float: left;
-  color: white;
-  padding-left: 30px;
+  margin: 0;
+  padding: 0;
   
-  #logo {
-    font-size: 3.5em;
-    @include bulletto;
-    transform: rotateZ(-5deg) skewX(5deg);
-    display: inline-block;
-    margin: 20px 0 0 -30px;
+  .image-overlay {
+    background-color: #1C1C1C;
+    opacity: 0.9;
+    width: 100%;
+    height: 100%;
   }
   
-  .white-text {
-    color: white;
-  }
-  
-  .title {
-    font-family: 'Bitter';
-    font-size: 1.8em;
-    margin-top: 40px;
-  }
-  
-  .grey-description {
-    font-family: 'Hind';
-    color: #7c7c7c;
-    margin-top: 20px;
-    line-height: 22px;
-  }
-  
-  input.email {
-    border-radius: 3px;
-    width: 80%;
-    margin: 20px auto;
-    height: 40px;
-    line-height: 40px;
-    vertical-align: middle;
-    border: none;
-    padding: 0 15px;
-    font-family: 'Bitter';
-    letter-spacing: 0.5px;
-    color: #232323;
-    font-size: 0.7em;
+  #outer-wrap {
+    width: 525px;
+    height: calc(100% - 60px);
+    box-sizing: border-box;
+    margin: 30px 40px;
+    background: transparent;
     float: left;
+    color: white;
+    padding-left: 30px;
     
-    &:focus {
-      outline: none;
-      border-color: #BD0E0E;
-      box-shadow: 0 0 7px #BD0E0E;
+    #logo {
+      font-size: 3.5em;
+      @include bulletto;
+      transform: rotateZ(-5deg) skewX(5deg);
+      display: inline-block;
+      margin: 20px 0 0 -30px;
+    }
+    
+    .white-text {
+      color: white;
+    }
+    
+    .title {
+      font-family: 'Bitter';
+      font-size: 1.8em;
+      margin-top: 40px;
+    }
+    
+    .grey-description {
+      font-family: 'Hind';
+      color: #999999;
+      margin-top: 30px;
+      line-height: 22px;
+    }
+    
+    input.email {
+      border-radius: 3px;
+      width: 80%;
+      margin: 30px auto;
+      height: 40px;
+      line-height: 40px;
+      vertical-align: middle;
+      border: none;
+      padding: 0 15px;
+      font-family: 'Bitter';
+      letter-spacing: 0.5px;
+      color: #232323;
+      font-size: 0.7em;
+      float: left;
+      
+      &:focus {
+        outline: none;
+        border-color: #BD0E0E;
+        box-shadow: 0 0 7px #BD0E0E;
+      }
+    }
+    
+    span.submit {
+      display: inline-block;
+      float: left;
+      border-radius: 5px;
+      background-color: #E50404;
+      text-align: center;
+      width: 35px;
+      height: 35px;
+      font-size: 2em;
+      line-height: 30px;
+      vertical-align: middle;
+      margin: 33px 0 0 10px;
+      
+      &:hover {
+        cursor: pointer;
+        background-color: #F82020;
+        transition: background-color 0.2s;
+      }
     }
   }
 }
