--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -2,13 +2,33 @@
   <div class='image-overlay'>
     <div id="outer-wrap">
       <p id="logo">ClickMade</h1>
-      <p class="title">We Build Super-Awesome<br>WordPress Themes. Nuff Said.</p>
-      <p class="grey-description">We're not quite ready yet, but we're painfully close. Pop
-      in your email in the box below and we'll give you the nod when we've launched. We'll even throw
-      in a <span class="white-text">free theme</span> for your trouble.</p>
+      <p class="title">
+        We Build Super-Awesome<br>WordPress Themes. Nuff Said.
+      </p>
+      
+      <p class="grey-description upper-description">
+        We're not quite ready yet, but we're painfully close. Pop
+        in your email in the box below and we'll give you the nod when we've launched. We'll even throw
+        in a <span class="white-text">free theme</span> for your trouble.
+      </p>
       
       <input type="text" class="email" placeholder="Enter your email address...">
       <span class="submit">+</span>
+      
+      <p class='grey-description lower-description'>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu.
+      </p>
+      
+      <div class="social-media-wrapper">
+        <span class="facebook icon"></span>
+        <span class="google icon"></span>
+        <span class="instagram icon"></span>
+        <span class="twitter icon"></span>
+      </div>
+      
       <div id="root"></div>
     </div>
   </div>
