test scaling margins

--- a/app/assets/stylesheets/coming_soon.css.scss
+++ b/app/assets/stylesheets/coming_soon.css.scss
@@ -20,7 +20,7 @@
     width: 525px;
     height: calc(100% - 60px);
     box-sizing: border-box;
-    margin: 55px 80px;
+    margin: 4.5em;
     background: transparent;
     float: left;
     color: white;
