accept email and create fancy responses

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,6 @@
 <div class='image-background'>
   <div class='image-overlay'>
-    <div id="outer-wrap">
+    <div id="left-wrap">
       <p id="logo">ClickMade</h1>
       <p class="title">
         We Build Super-Awesome<br>WordPress Themes. Nuff Said.
@@ -13,7 +13,7 @@
       </p>
       
       <input type="text" class="email" placeholder="Enter your email address...">
-      <span class="submit">+</span>
+      <span class="fa fa-plus submit" aria-hidden="true"></span>
       
       <p class='grey-description lower-description'>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
@@ -28,8 +28,9 @@
         <span class="instagram icon"></span>
         <span class="twitter icon"></span>
       </div>
-      
-      <div id="root"></div>
+    </div>
+    
+    <div id="right-wrap">
     </div>
   </div>
 </div>
