--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,10 @@
  *= require_self
  */
  
- @import 'compass';
- @import 'fonts';
+@import 'compass';
+@import 'fonts';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 body, html {
   height: 100%;
