--- a/app/assets/stylesheets/coming_soon.css.scss
+++ b/app/assets/stylesheets/coming_soon.css.scss
@@ -16,7 +16,7 @@
     height: 100%;
   }
   
-  #outer-wrap {
+  #left-wrap {
     width: 525px;
     height: calc(100% - 60px);
     box-sizing: border-box;
@@ -90,16 +90,27 @@
       text-align: center;
       width: 35px;
       height: 35px;
-      font-size: 2em;
-      line-height: 32.5px;
+      font-size: 1.15em;
+      line-height: 37.5px;
       vertical-align: middle;
       margin: 41.5px 0 0 10px;
       
       &:hover {
         cursor: pointer;
         background-color: #F82020;
-        transition: background-color 0.2s;
+        transition: background-color 0.3s;
       }
+    }
+    
+    .loading {
+      background-size: 60%;
+      background-image: url('/assets/rolling.gif');
+      background-position: center;
+      background-repeat: no-repeat
+    }
+    
+    .fa-check {
+      transition: all 0.6s;
     }
     
     .social-media-wrapper {
@@ -141,5 +152,9 @@
       display: block;
       clear: both;
     }
+  }
+  
+  #right-wrap {
+    float: left;
   }
 }
